  Standen for the hint (actually, the limit was 5 and that was a 
  left-over from early testing).
- fixed a bug in makefile which caused DB-support to be disabled when
  NETZIP support was enabled
- added the -e option to allow transmission of every message to remote
  hosts (effectively turns off duplicate message suppression)
---------------------------------------------------------------------------
Version 1.13.0 (RGer), 2006-12-19
- added '$' as ToPos proptery replacer specifier - means "up to the
  end of the string"
- property replacer option "escape-cc", "drop-cc" and "space-cc"  added
- changed the handling of \0 characters inside syslog messages. We now
  consistently escape them to "#000". This is somewhat recommended in
  the draft-ietf-syslog-protocol-19 draft. While the real recomendation
  is to not escape any characters at all, we can not do this without
  considerable modification of the code. So we escape it to "#000", which
  is consistent with a sample found in the Internet-draft.
- removed message glue logic (see printchopped() comment for details)
  Also caused removal of parts table and thus some improvements in
  memory usage.
- changed the default MAXLINE to 2048 to take care of recent syslog
  standardization efforts (can easily be changed in syslogd.c)
- added support for byte-counted TCP syslog messages (much like
  syslog-transport-tls-05 Internet Draft). This was necessary to
  support compression over TCP.
- added support for receiving compressed syslog messages
- added support for sending compressed syslog messages
- fixed a bug where the last message in a syslog/tcp stream was
  lost if it was not properly terminated by a LF character
---------------------------------------------------------------------------
Version 1.12.3 (RGer), 2006-10-04
- implemented some changes to support Solaris (but support is not
  yet complete)
- commented out (via #if 0) some methods that are currently not being use
  but should be kept for further us