@@ -8,6 +8,12 @@ Version 1.13.1 (RGer), 2007-02-xx
   NETZIP support was enabled
 - added the -e option to allow transmission of every message to remote
   hosts (effectively turns off duplicate message suppression)
+- (somewhat) improved memory consumption when compiled with MySQL support
+- looks like we fixed an incompatibility with MySQL 5.x and above software
+  At least in one case, the remote server name was destroyed, leading to 
+  a connection failure. The new, improved code does not have this issue and
+  so we see this as solved (the new code is generally somewhat better, so
+  there is a good chance we fixed this incompatibility).
 ---------------------------------------------------------------------------
 Version 1.13.0 (RGer), 2006-12-19
 - added '$' as ToPos proptery replacer specifier - means "up to the
